Update dependencies and fix code issues